--- a/server/views/partials/appearanceDetailsLayout.njk
+++ b/server/views/partials/appearanceDetailsLayout.njk
@@ -91,23 +91,23 @@
                     {% endif %}
                 {% endif %}
                 {% if courtAppearance.warrantType === 'SENTENCING'%}
-                    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-                    <h2 class="govuk-heading-m govuk-!-margin-top-6 govuk-!-margin-bottom-2">Sentences</h2>
-                    {{ govukSummaryList({
-                        classes: "govuk-summary-list--no-border offences-summary-card-content",
-                        rows: [
-                            {
-                                key: {
-                                    text: "Sentences added"
-                                },
-                                value: {
-                                    text: sentences | length
-                                },
-                                classes: "offences-summary-card-offence-details-row"
-                            }
-                        ]
-                    }) }}
                     {% if sentences | length %}
+                        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+                        <h2 class="govuk-heading-m govuk-!-margin-top-6 govuk-!-margin-bottom-2">Offences</h2>
+                        {{ govukSummaryList({
+                            classes: "govuk-summary-list--no-border offences-summary-card-content",
+                            rows: [
+                                {
+                                    key: {
+                                        text: "Offences added"
+                                    },
+                                    value: {
+                                        text: sentences | length
+                                    },
+                                    classes: "offences-summary-card-offence-details-row"
+                                }
+                            ]
+                        }) }}
                         {{ govukDetails({
                             summaryText: "Show Sentences",
                             html: SentenceDetailHtml
