--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -1,14 +1,15 @@
 {% extends "../partials/prisonerBannerLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
+{% from "hmpps/components/court-cases-release-dates/offence-card/macro.njk" import offenceCard %}
+{% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 {% from "govuk/components/table/macro.njk" import govukTable %}
-{% from "govuk/components/details/macro.njk" import govukDetails %}
-{% from "hmpps/components/court-cases-release-dates/offence-card/macro.njk" import offenceCard %}
+{% from "govuk/components/tag/macro.njk" import govukTag %}
 
 {% set pageTitle = applicationName + " - Home" %}
 
 {% block content %}
-    <h1 class="govuk-heading-l">Court cases </h1>
+    <h1 class="govuk-heading-l">Court cases</h1>
     <div class="govuk-grid-row">
 
         <div class="govuk-grid-column-two-thirds">
@@ -181,11 +182,23 @@
                             },
                             actions: {
                                 items: [
-                                {
-                                    href: "/person/" + nomsId + "/edit-court-case/" + courtCaseDetails.courtCaseUuid +  "/add-court-appearance/" + courtCaseDetails.appearanceTotal + "/new-journey",
-                                    text: "Add an appearance",
-                                    visuallyHiddenText: "Add an appearance"
-                                }]
+                                    {
+                                        href: "/person/" + nomsId + "/edit-court-case/" + courtCaseDetails.courtCaseUuid +  "/add-court-appearance/" + courtCaseDetails.appearanceTotal + "/new-journey",
+                                        text: "Add an appearance",
+                                        visuallyHiddenText: "Add an appearance"
+                                    }
+                                    if courtCaseDetails.overallCaseStatus != "INACTIVE" else
+                                    {
+                                        href: null,
+                                        html: govukTag({
+                                            text: "Inactive"
+                                        }),
+                                        visuallyHiddenText: "Inactive"
+                                    }
+                                ]
+                            },
+                            attributes: {
+                                "data-qa": "courtCaseCard-" + courtCaseDetails.courtCaseUuid
                             }
                         },
                         rows: [
