--- a/server/views/pages/offence/confirm-offence.njk
+++ b/server/views/pages/offence/confirm-offence.njk
@@ -39,7 +39,7 @@
                 text: "Legislation"
             },
             value: {
-                text: offence.legislation if offence.legislation else 'Not entered'
+                text: offence.legislation
             }
         }
     ), rows) %}
