Rass-499 align styling of prototype with dev new sentencing (#503)
* Updated task list

* Showing button on task list

* Removed visited state on task list links

* Fixed input width for case reference and offence code

* Fixed width of the dropdown on court name typeahead

* Updated the hint text for overall conviction date

* Updated count number page

* Pluralised heading

* Updated confirm offence page

* Added hint text for SOPC

* Changing sentence to offence

* Updated captions

* Updated captions for next court appearance

* Fixed int tests

* Code review fixes

* Updated appearance details component

* Updated appearance details component

---------

Co-authored-by: Pavilion Sahota <pavilion.sahota@justice.gov.uk>

--- a/server/views/partials/offenceCaption.njk
+++ b/server/views/partials/offenceCaption.njk
@@ -1,14 +1,7 @@
-
 <span class="govuk-caption-l">
-    {% if not isAddCourtAppearance %}
-        Appearance {{ courtAppearance.caseReferenceNumber }} at {{ courtAppearance.courtName }} on {{ courtAppearance.warrantDate | formatDate }}
-    {% elif offence.sentence.countNumber and not isDeleteOffence %}
-        Add sentence information for count {{ offence.sentence.countNumber }}
-    {% elif isAddOffences %}
+    {% if isAddOffences %}
         Add offences
-    {% elif isReviewOffences %}
-        Review offences
     {% else %}
-        Add a court case
+        Review offences
     {% endif %}
 </span>
