--- a/server/views/pages/courtAppearance/warrant-type.njk
+++ b/server/views/pages/courtAppearance/warrant-type.njk
@@ -9,7 +9,13 @@
         <div class="govuk-grid-column-two-thirds">
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-warrant-type{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-                {% include "../../partials/appearanceCaption.njk" %}
+                <span class="govuk-caption-l">
+                    {% if addOrEditCourtCase === "add" %}
+                        Add a court case
+                    {% else %}
+                        Add an appearance
+                    {% endif %}
+                </span>
                 {{ govukRadios({
                     name: "warrantType",
                     errorMessage: errors | findError('warrantType'),
