--- a/server/views/partials/appearanceDetailsLayout.njk
+++ b/server/views/partials/appearanceDetailsLayout.njk
@@ -12,14 +12,6 @@
     </dl>
 {% endset %}
 
-{% set SentenceDetailHtml %}
-    <dl class="offences-summary-card-content">
-        {% for sentence in sentences %}
-            {{ offenceSummaryRow(sentence, offenceNameMap) }}
-        {% endfor %}
-    </dl>
-{% endset %}
-
 {% block content %}
     {{ super() }}
     
@@ -66,7 +58,8 @@
                         'data-qa': 'appearanceDetails'
                     }
                 }) }}
-                {% if courtAppearance.warrantType === 'REMAND' or offences | length %}
+
+                {% if offences | length %}
                     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
                     <h2 class="govuk-heading-m govuk-!-margin-top-6 govuk-!-margin-bottom-2">Offences</h2>
                     {{ govukSummaryList({
@@ -83,36 +76,10 @@
                             }
                         ]
                     }) }}
-                    {% if offences | length %}
                     {{ govukDetails({
-                        summaryText: "Show Offences",
+                        summaryText: "Show offences",
                         html: offenceDetailHtml
                     }) }}
-                    {% endif %}
-                {% endif %}
-                {% if courtAppearance.warrantType === 'SENTENCING'%}
-                    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-                    <h2 class="govuk-heading-m govuk-!-margin-top-6 govuk-!-margin-bottom-2">Sentences</h2>
-                    {{ govukSummaryList({
-                        classes: "govuk-summary-list--no-border offences-summary-card-content",
-                        rows: [
-                            {
-                                key: {
-                                    text: "Sentences added"
-                                },
-                                value: {
-                                    text: sentences | length
-                                },
-                                classes: "offences-summary-card-offence-details-row"
-                            }
-                        ]
-                    }) }}
-                    {% if sentences | length %}
-                        {{ govukDetails({
-                            summaryText: "Show Sentences",
-                            html: SentenceDetailHtml
-                        }) }}
-                    {% endif %}
                 {% endif %}
             </div>
         </div>
