--- a/server/views/pages/offence/check-offence-answers.njk
+++ b/server/views/pages/offence/check-offence-answers.njk
@@ -20,6 +20,32 @@
                 Edit the {{ offenceSentence }} details for this appearance
             {% endif %}
         </h1>
+        
+        {% if courtAppearance.warrantType === 'SENTENCING' and courtAppearance.hasOverallSentenceLength %}
+            {{ govukSummaryList({
+                rows: [
+                    {
+                        key: {
+                            text: "Overall sentence length"
+                        },
+                        value: {
+                            text: courtAppearance.overallSentenceLength | formatLengths
+                        }
+                    },
+                    {
+                        key: {
+                            text: "Sentences added"
+                        },
+                        value: {
+                            text: overallSentenceLengthComparison.custodialLength | formatLengthsWithoutPeriodOrder
+                        }
+                    }
+                ],
+                attributes: {
+                    "data-qa": "overallSentenceLengthComparison"
+                }
+            }) }}
+        {% endif %}
 
         {{ govukButton({
             text: "Add an offence" ,
@@ -35,6 +61,8 @@
                 text: "No offences have been added to this appearance."
             }) }}
         {% endif %}
+
+    
 
         {% for offence in courtAppearance.offences %}
             {{ offenceCard({
