Adjusted hint text code in UI

--- a/server/views/pages/offence/sentence-type.njk
+++ b/server/views/pages/offence/sentence-type.njk
@@ -11,7 +11,9 @@
         value: sentenceType.sentenceTypeUuid + "|" + sentenceType.classification,
         text: sentenceType.description,
         checked: offenceSentenceTypeForm.sentenceType === sentenceType.sentenceTypeUuid,
-        hint: sentenceType.hint
+        hint: {
+            text: sentenceType.hintText
+        }
     })%}
 {% endfor %}
 
