Passing fine amount to offence card component

--- a/server/views/pages/courtAppearance/details.njk
+++ b/server/views/pages/courtAppearance/details.njk
@@ -237,6 +237,7 @@
                         sentenceServeType: offence.sentence.sentenceServeType,
                         consecutiveTo: offence.sentence.consecutiveTo,
                         sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId],
+                        fineAmount: offence.sentence.fineAmount,
                         actions: {
                             items: [
                                 {
