--- a/server/views/pages/offence/check-offence-answers.njk
+++ b/server/views/pages/offence/check-offence-answers.njk
@@ -80,6 +80,7 @@
                 sentenceServeType: offence.sentence.sentenceServeType,
                 consecutiveTo: offence.sentence.consecutiveTo,
                 sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence,
+                fineAmount: offence.sentence.fineAmount,
                 actions: {
                     items: [
                         {
