--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -157,7 +157,8 @@
                                         terrorRelated: offence.terrorRelated,
                                         isSentenced: offence.sentence,
                                         custodialSentenceLength: offence.sentence.periodLengths | findPeriodLengthByType("SENTENCE_LENGTH"),
-                                        sentenceType: courtCaseDetails.sentenceTypeMap[offence.sentence.sentenceTypeId]
+                                        sentenceType: courtCaseDetails.sentenceTypeMap[offence.sentence.sentenceTypeId],
+                                        fineAmount: offence.sentence.fineAmount
                                     })
                                 }}
                     {% endfor %}
