--- a/server/views/pages/courtCaseDetails.njk
+++ b/server/views/pages/courtCaseDetails.njk
@@ -72,6 +72,7 @@
                             sentenceServeType: charge.sentence.sentenceServeType,
                             consecutiveTo: charge.sentence.consecutiveToChargeNumber,
                             sentenceType: charge.sentence.sentenceType.description,
+                            fineAmount: charge.sentence.fineAmount,
                             detailsClasses: 'govuk-!-padding-4'
                         })
                     }}
